--- a/01_agama/dirgha/DA_25.md
+++ b/01_agama/dirgha/DA_25.md
@@ -67,7 +67,7 @@ next: DA_26.html
 19\. Kāśyapa said to the Buddha, “What are the completion of precepts and completion of views that go beyond the ascetic practices and that are fine and supreme?”
 {:#p19}
 
-20\. The Buddha told Kāśyapa, “Listen closely, and well consider it. I’ll explain it for you.”
+20\. The Buddha told Kāśyapa, “Listen closely, and consider it well. I’ll explain it for you.”
 {:#p20}
 
 Kāśyapa said, “Very well, Gautama. I’d be glad to hear it.”
