--- a/01_agama/dirgha/DA_26.md
+++ b/01_agama/dirgha/DA_26.md
@@ -248,7 +248,7 @@ He answered, “He wouldn’t be uncertain. Why is that? It’s his native count
 57\. Vāsiṣṭha and Bhāradvāja then both said to the Buddha, “Setting aside this discussion, we’ve heard that the ascetic Gautama is clearly aware of the way to Brahmā and explains it for others. He also relates how he sees others reborn with Brahmā. Please let the ascetic Gautama discuss the way to Brahmā out of compassion for us. Make it a plain and detailed explanation!”
 {:#p57}
 
-58\. The Buddha said, “Listen closely, and well consider it. I’ll explain it for you.”
+58\. The Buddha said, “Listen closely, and consider it well. I’ll explain it for you.”
 {:#p58}
 
 They answered, “Very well. We’d like to hear it.”
