--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -14,7 +14,7 @@ next: MA_017.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of the Kālāmas accompanied by a great assembly of monks. He went to the town of \*Keśaputra and stayed in a rosewood grove north of it. [\[2\]](#n2){:#ref2}
 {:#p1}
 
-### The Doubt of the Kālāmas
+#### The Doubt of the Kālāmas
 
 2\. It was then that the Kālāma people of \*Keśaputra heard: “The ascetic Gautama from the Śākya clan renounced the Śākya dynasty, left home, and trained on the path. He has traveled to the country of the Kālāmas and arrived at \*Keśaputra with a great assembly of monks. They are staying in the rosewood grove north of the town.
 {:#p2}
@@ -25,7 +25,7 @@ next: MA_017.html
 4\. “We should go together to visit the ascetic Gautama, venerate, and make offerings to him.”
 {:#p4}
 
-5\. After hearing this, Kālāma people of \*Keśaputra left town with their peers and attendants, following each other as they went north to the rosewood grove. They wanted to visit the Bhagavān, venerate, and make offerings to him. When they arrived, some of those Kālāmas bowed their heads at the Buddha’s feet and withdrew to sit at one side. Some of them exchanged greetings with the Buddha and withdrew to sit at one side. Some saluted the Buddha with their palms together and withdrew to sit at one side. Some looked at the Buddha from a distance and quietly sat down.
+5\. After hearing this, the Kālāma people of \*Keśaputra left town with their peers and attendants, following each other as they went north to the rosewood grove. They wanted to visit the Bhagavān, venerate, and make offerings to him. When they arrived, some of those Kālāmas bowed their heads at the Buddha’s feet and withdrew to sit at one side. Some of them exchanged greetings with the Buddha and withdrew to sit at one side. Some saluted the Buddha with their palms together and withdrew to sit at one side. Some looked at the Buddha from a distance and quietly sat down.
 {:#p5}
 
 6\. After they each had sat down, the Kālāma people settled as the Buddha taught the Dharma. He encouraged, roused, and made them rejoice, teaching the Dharma for them with measureless methods. After he encouraged, roused, and made them rejoice, he waited quietly.
@@ -46,7 +46,7 @@ next: MA_017.html
 11\. “Kālāmas, ‘deluded’ means to be hindered by delusion. When the mind is dissatisfied, a person sometimes kills beings, takes what’s not given, commits sexual misconduct, knowingly lies, and drinks alcohol.
 {:#p11}
 
-### Ten Good Deeds
+#### Ten Good Deeds
 
 12\. “Kālāmas, the well-versed noble disciple parts with killing, stops killing, and discards weapons. With conscience, modesty, and compassion, they are beneficial to all beings, even insects and worms. They purify their mind and rid it of killing beings.
 {:#p12}
@@ -78,7 +78,7 @@ next: MA_017.html
 21\. “Kālāmas, the well-versed noble disciple is free of wrong view and stops wrong view. They conduct themselves in right view and aren’t mistaken. Such is their view, and such is their speech: ‘There’s generosity, purification, and incantations. There’s the results of good and bad actions. There’s the present world and another world. There’s father and mother. The world truly has people who depart and go to good places, good departures, and good headings. In this world and the next, they accomplish and dwell in their own knowledge, perception, and realization.’ They purify their mind and rid it of wrong views.
 {:#p21}
 
-### The Four Immeasurables
+#### The Four Immeasurables
 
 22\. “Thus, Kālāmas, the well-versed noble disciple achieves pure physical conduct and achieves pure verbal and mental conduct. They’re free of anger, free of dispute, and they get rid of drowsiness. Without agitation or arrogance, they end doubt and free themselves from pride. With right mindfulness and right knowledge, they have no delusions.
 {:#p22}
@@ -89,7 +89,7 @@ next: MA_017.html
 24\. “So it is with compassion, joy, and equanimity. Having no bonds, enmity, anger, or quarrel, they accomplish and dwell in pervading the whole world, [their mind being] broad, vast, measureless, and well cultivated.
 {:#p24}
 
-### The Four Peaceful Dwellings
+#### The Four Peaceful Dwellings
 
 25\. “Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. They readily attain four peaceful dwellings. What are the four?
 {:#p25}
@@ -109,7 +109,7 @@ next: MA_017.html
 30\. “Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. These are called the four peaceful dwellings.”
 {:#p30}
 
-### Conclusion
+#### Conclusion
 
 31\. The Kālāmas said to the Bhagavān, “Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute and attains four peaceful dwellings. What are the four?
 {:#p31}
@@ -142,7 +142,7 @@ next: MA_017.html
 1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0438b13" target="_blank">T26.1.438b13-9c22</a>. The direct parallel for this <em>sūtra</em> is [AN 3.65](https://suttacentral.net/an3.65){: target="_blank"}. [\[back\]](#ref1)
 2. {:#n2}<em>country of the Kālāmas</em>. C. <span class="ch">伽藍</span>, MCh k’ie-lam, P/S Kālāma. The Taisho reads <span class="ch">園</span> (“park”), which appears to be an error. I’ve adopted an alternate reading of <span class="ch">國</span> (“country”). \\
 *<em>Keśaputra</em>. C. <span class="ch">羇舍子</span>, MC. kɪĕ-ʃɪă-putra, P. Kesamutta. The Chinese is a partial transliteration (<span class="ch">子</span> typically translates P. <em>putta</em>, S. <em>putra</em>). I’ve not located a S. attestation for this place name, so I’ve tentatively reconstructed it given typical Chinese transliterations. [\[back\]](#ref2)
-3. {:#n3}<em>causes that are pre-existent</em>. C. <span class="ch">因習本有</span>. I suspect that <span class="ch">因習</span> translates a verb equivalent to P. <em>uppajjati</em> (“to arise, come into being”), which is found in the P. parallel. <span class="ch">本有</span> usually means “inherent existence,” but here with the functional meaning of “pre-existing.” The verb <span class="ch">因習</span> is apparently the participial adjective (“arising pre-existent”), making the expression awkward, but I believe it basically means “pre-existing cause.”
+3. {:#n3}<em>causes that are pre-existent</em>. C. <span class="ch">因習本有</span>. I suspect that <span class="ch">因習</span> translates a verb equivalent to P. <em>uppajjati</em> (“to arise, come into being”), which is found in the P. parallel. <span class="ch">本有</span> usually means “inherent existence,” but here with the functional meaning of “pre-existing.” The verb <span class="ch">因習</span> is apparently the participial adjective (“arising pre-existent”), making the expression awkward, but I believe it basically means “pre-existing cause.” [\[back\]](#ref3)
 
 ---
 
