--- a/01_agama/madhyama/MA_017.md
+++ b/01_agama/madhyama/MA_017.md
@@ -17,20 +17,20 @@ next: MA_025.html
 2\. It was then that there was a [young] Ābhāsvara god named Gāminī. His appearance was glorious, and he was radiant and glowing. At night just before dawn, he went to the Buddha, bowed his head at the Buddha’s feet, and then withdrew to stand at one side. That [young] Ābhāsvara god Gāminī then said, “Bhagavān, the priests are proud of themselves, serving one god or another. When the lives of sentient beings end, the priests can send them as they like to be reborn in good places, born up in the Heavens. The Bhagavān is the Dharma Lord! May the Bhagavān cause sentient beings to go to good places, being born up in the Heavens when their lives end!”
 {: #p2}
 
-### A Person Who Practices a Dark Path
+#### A Person Who Practices a Dark Path
 
-3\. The Bhagavān told him, “Gāminī, now I will ask you a question. Answer as you understand it. Gāminī, what do you think? Suppose in a town there is a man or woman who is indolent, doesn’t make effort, and practices a bad teaching. They consummate the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and false view.
+3\. The Bhagavān told him, “Gāminī, now I will ask you a question. Answer as you understand it. Gāminī, what do you think? Suppose in a town there is a man or woman who is indolent, doesn’t make effort, and practices a bad teaching. They consummate the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and wrong view.
 {: #p3}
 
-4\. “When their life ends, suppose a crowd of people comes. They each praise them and pray with their palms together. They say, ‘You were a man or woman who was indolent, didn’t make effort, and practiced a bad teaching. You consummated the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and false view. Because of these causes and these conditions, you surely will go to a good place, being born up in the Heavens when your body breaks up and your life ends.’
+4\. “When their life ends, suppose a crowd of people comes. They each praise them and pray with their palms together. They say, ‘You were a man or woman who was indolent, didn’t make effort, and practiced a bad teaching. You consummated the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and wrong view. Because of these causes and these conditions, you surely will go to a good place, being born up in the Heavens when your body breaks up and your life ends.’
 {: #p4}
 
-5\. “Thus, Gāminī, that man or woman was indolent, didn’t make effort, and practiced a bad teaching. They consummated the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and false view. Would they go to a good place, being born up in the Heavens when their body breaks up and their life ends because of these causes and these conditions when this crowd of people praises them and prays with their palms together?”
+5\. “Thus, Gāminī, that man or woman was indolent, didn’t make effort, and practiced a bad teaching. They consummated the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and wrong view. Would they go to a good place, being born up in the Heavens when their body breaks up and their life ends because of these causes and these conditions when this crowd of people praises them and prays with their palms together?”
 {: #p5}
 
 Gāminī answered, “No, Bhagavān.”
 
-6\. The Bhagavān commended him, “Good, Gāminī! Why is that? That man or woman was indolent, didn’t make effort, and practiced a bad teaching. They consummated the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and false view. Suppose a crowd of people praises them and prays with their palms together, ‘Because of these causes and these conditions, you can go to a good place, being born up in the Heavens when your body breaks up and your life ends.’ This is not something that’s possible.
+6\. The Bhagavān commended him, “Good, Gāminī! Why is that? That man or woman was indolent, didn’t make effort, and practiced a bad teaching. They consummated the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and wrong view. Suppose a crowd of people praises them and prays with their palms together, ‘Because of these causes and these conditions, you can go to a good place, being born up in the Heavens when your body breaks up and your life ends.’ This is not something that’s possible.
 {: #p6}
 
 #### Simile of a Heavy Stone in Water
@@ -40,10 +40,10 @@ Gāminī answered, “No, Bhagavān.”
 
 Gāminī answered, “No, Bhagavān.”
 
-8\. “So it is, Gāminī. That man or woman was indolent, didn’t make effort, and practiced a bad teaching. They consummated the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and false view. Suppose a crowd of people praises them and prays with their palms together, ‘Because of these causes and these conditions, you can go to a good place, being born up in the Heavens when your body breaks up and your life ends.’ This is not something that’s possible. Why is that? The path of ten bad deeds is dark and has a dark result. It naturally heads downward; it surely goes to a bad place.
+8\. “So it is, Gāminī. That man or woman was indolent, didn’t make effort, and practiced a bad teaching. They consummated the path of ten bad deeds, which are killing beings, taking what’s not given, sexual misconduct, false speech … and wrong view. Suppose a crowd of people praises them and prays with their palms together, ‘Because of these causes and these conditions, you can go to a good place, being born up in the Heavens when your body breaks up and your life ends.’ This is not something that’s possible. Why is that? The path of ten bad deeds is dark and has a dark result. It naturally heads downward; it surely goes to a bad place.
 {: #p8}
 
-### A Person Who Practices a Light Path
+#### A Person Who Practices a Light Path
 
 9\. “Gāminī, what do you think? Suppose there’s a man or woman in that town who makes effort, diligently cultivates, and practices the superb teaching. They consummate the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. When their life ends, suppose a crowd of people comes. They each praise them and pray with their palms together, ‘You man or woman made effort, diligently cultivated, and practiced the superb teaching. You consummated the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. Because of these causes and these conditions, you will go at a bad place, being born in hell when your body breaks up and your life ends.’
 {: #p9}
@@ -53,7 +53,7 @@ Gāminī answered, “No, Bhagavān.”
 
 Gāminī answered, “No, Bhagavān.”
 
-11\. The Bhagavān commended him, “Good, Gāminī! Why is that? Gāminī, that man or woman made effort, diligently cultivated, and practiced the superb teaching. They consummated the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. Suppose [a crowd of people comes,] and they each praise them and pray with their palms together, ‘Because of these causes and these conditions, you can go to a bad place, being born in hell when your body breaks and your life ends.’ This is not something that’s possible. Why is that? Gāminī, the path of the ten good deeds is light and has a light result. It naturally rises upward; it surely goes to a good place.
+11\. The Bhagavān commended him, “Good, Gāminī! Why is that? Gāminī, that man or woman made effort, diligently cultivated, and practiced the superb teaching. They consummated the path of ten good deeds, which are parting with killing and stopping killing … taking what’s not given … sexual misconduct … false speech … parting with wrong view, stopping wrong view, and attaining right view. Suppose [a crowd of people comes,] and they each praise them and pray with their palms together, ‘Because of these causes and these conditions, you can go to a bad place, being born in hell when your body breaks and your life ends.’ This is not something that’s possible. Why is that? Gāminī, the path of ten good deeds is light and has a light result. It naturally rises upward; it surely goes to a good place.
 {: #p11}
 
 #### The Simile of a Pot of Cream in Water
