--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -68,7 +68,7 @@ next: MA_075.html
 17\. Once they had assembled at the meeting hall, he came back to the Buddha, bowed his head at his feet, and withdrew to sit to one side. He said, “Bhagavān, any monks who’ve traveled to Mṛgadāva Park in Bharga have all been sent to assembly at the meeting hall. May the Bhagavān know the time is right.”
 {: #p17}
 
-18\. Thereupon, the Bhagavān led Venerable Ānanda to the meeting hall. He prepared a seat in front of the assembled monks and sat down. After sitting, he addressed them, “Monks, now I will explain the eight thoughts of a great man for you. All of you, listen closely, and well consider it!” The monks then accepted the teaching and listened.
+18\. Thereupon, the Bhagavān led Venerable Ānanda to the meeting hall. He prepared a seat in front of the assembled monks and sat down. After sitting, he addressed them, “Monks, now I will explain the eight thoughts of a great man for you. All of you, listen closely, and consider it well!” The monks then accepted the teaching and listened.
 {: #p18}
 
 19\. The Buddha said, “The eight thoughts of a great man are these: ‘The path comes from having no desires; it’s not attained by having desires. The path comes from knowing what’s enough; it’s not obtained by lacking satisfaction. The path comes from seclusion; it’s not obtained by enjoying company, living with company, or joining company. The path comes from diligence; it’s not obtained by indolence. The path comes from right mindfulness; it’s not obtained by wrong mindfulness. The path comes from a concentrated mind; it’s not obtained by a distracted mind. The path comes from wisdom; it’s not obtained by foolishness. The path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity; it’s not obtained by frivolity, enjoying frivolity, or practicing frivolity.’
