--- a/01_agama/madhyama/MA_186.md
+++ b/01_agama/madhyama/MA_186.md
@@ -19,7 +19,7 @@ next: MA_190.html
 
 The monks then said to the Bhagavān, “The Bhagavān is the basis of the Dharma, the Bhagavān is the Dharma lord, and the Dharma comes from the Bhagavān. Please let him teach it. After listening, we’ll get a detailed knowledge of its meaning.”
 
-3\. The Buddha told them, “Listen closely, monks, listen closely! Well consider it. I’ll provide a discerning explanation for you.”
+3\. The Buddha told them, “Listen closely, monks, listen closely! Consider it well. I’ll provide a discerning explanation for you.”
 {:#p3}
 
 The monks then accepted the teaching and listened.
