--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -41,7 +41,7 @@ Venerable Ānanda replied, “Very well.”
 
 The monks then replied, “Bhagavān, the direction was to discuss the teaching. That was the reason we came here for a meeting.”
 
-9\. The Bhagavān commended them. “Good, good! Monks should do two things at meetings: One is to discuss the teaching, and the second is to remain quiet. Why is that? I will also discuss the teaching for you. Listen closely, listen closely. Well consider it.”
+9\. The Bhagavān commended them. “Good, good! Monks should do two things at meetings: One is to discuss the teaching, and the second is to remain quiet. Why is that? I will also discuss the teaching for you. Listen closely, listen closely. Consider it well.”
 {:#p9}
 
 The monks then replied, “Very well, we will accept the teaching and listen.”
