--- a/01_agama/samyukta/02/SA2_128.md
+++ b/01_agama/samyukta/02/SA2_128.md
@@ -19,7 +19,7 @@ next: SA2_129.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.56c3'>爾時，世尊告諸比丘： 「我今當說世間、世間集、世間滅、世間滅道跡。 諦聽，善思！</td>
-    <td id='p2'>2. It was then that the Bhagavān told the monks, “Now, I will discuss the world, the world’s formation, the world’s cessation, and the path to the world’s cessation. Listen closely, and well consider it!”</td>
+    <td id='p2'>2. It was then that the Bhagavān told the monks, “Now, I will discuss the world, the world’s formation, the world’s cessation, and the path to the world’s cessation. Listen closely, and consider it well!”</td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.56c5'>「云何為世間？ 謂六內入處。 云何六？ 眼內入處，耳⋯鼻⋯舌⋯身⋯意內入處。</td>
