--- a/01_agama/samyukta/02/SA2_95.md
+++ b/01_agama/samyukta/02/SA2_95.md
@@ -47,7 +47,7 @@ next: SA2_96.html
   </tr>
   <tr>
     <td class='ch' title='t99.2.53b29'>尊者阿難語諸比丘： 「諦聽，善思。 於世尊略說法中，當為汝等廣說其義。 世尊略說者，即是滅六入處有餘之說。 故言： 『眼處滅，色想則離。 耳⋯鼻⋯舌⋯身⋯意入處滅，法想則離。』 世尊略說此法已，入室坐禪。 我今已為汝等分別說義。」</td>
-    <td id='p9'>9. Venerable Ānanda told the monks, “Listen closely, and well consider this. I will give you a full explanation of the Bhagavān’s brief explanation of the Dharma. The Bhagavān’s brief teaching was to cease the six sense fields, but there was more to say. Therefore, he said, ‘The eye sense field ceases, and perception of forms then is escaped. The ear … nose … tongue … body … mind sense field ceases, and the perception of notions then is escaped.’ After the Bhagavān gave this brief explanation of this Dharma, he went into his room to sit in meditation. Now, I’ve given you an discerning explanation of this meaning.”</td>
+    <td id='p9'>9. Venerable Ānanda told the monks, “Listen closely, and consider this well. I will give you a full explanation of the Bhagavān’s brief explanation of the Dharma. The Bhagavān’s brief teaching was to cease the six sense fields, but there was more to say. Therefore, he said, ‘The eye sense field ceases, and perception of forms then is escaped. The ear … nose … tongue … body … mind sense field ceases, and the perception of notions then is escaped.’ After the Bhagavān gave this brief explanation of this Dharma, he went into his room to sit in meditation. Now, I’ve given you an discerning explanation of this meaning.”</td>
   </tr>
   <tr>
     <td class='ch' title='t99.2.53c5'>尊者阿難說此義已，諸比丘聞其所說歡喜，奉行。</td>
