--- a/01_agama/samyukta3/T101_15.md
+++ b/01_agama/samyukta3/T101_15.md
@@ -20,7 +20,7 @@ next: ../other/T102.html
 3\. “What is this one teaching? The nature and practice of this one teaching is the mindfulness of breathing. If a monk is mindful of breathing as he practices, thinks, and often abides in it, then his body will become calm, and his mind’s thoughts and supports will also then stop without anything [remaining]. It’s just the practice of mindful wisdom and the fulfillment of practice. This is a monk’s one teaching. The nature of this one teaching is often performing the mindfulness of actions and appearances. It makes the body become calm, and the thoughts and supports of the mind are stopped without any remaining. It’s just the practice of wisdom and mindfulness, which are increasingly fulfilled. If a monk with this monk’s one teaching can practice, cause, be mindful, and often perform it, he’ll attain enlightenment accordingly.”
 {:#p3}
 
-4\. Thus did the Buddha speak.
+4\. This is what the Buddha said.
 {:#p4}
 
 ---
