--- a/01_agama/samyukta/01/SA1_32.md
+++ b/01_agama/samyukta/01/SA1_32.md
@@ -31,7 +31,7 @@ next: SA1_33.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c14'>佛告比丘： 「諦聽，善思。 當為汝說。」</td>
-    <td>The Buddha told the monk, “[Listen closely!] Listen closely, and well consider it. I will explain it for you.”</td>
+    <td>The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain it for you.”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c14'>佛告比丘： 「若於色說是生厭、離欲、滅盡、寂靜法者，是名法師。 若於受⋯想⋯行⋯識說是生厭、離欲、滅盡、寂靜法者，是名法師。 是名如來所說法師。」</td>
