--- a/01_agama/madhyama/MA_010.md
+++ b/01_agama/madhyama/MA_010.md
@@ -132,7 +132,7 @@ next: MA_011.html
 
 ### Notes
 
-1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0431c13" target="_blank">T26.1.431c13-32c28</a>. The direct parallels to this <em>sūtra</em> are [MN 2](https://suttacentral.net/mn2){: target="_blank"} and EĀ 40.6. [\[back\]](#ref1)
+1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0431c13" target="_blank">T26.1.431c13-32c28</a>. The direct parallels to this <em>sūtra</em> are [MN 2](https://suttacentral.net/mn2){: target="_blank"}, [AN 6.58](https://suttacentral.net/an6.58){: target="_blank"}, and EĀ 40.6. [\[back\]](#ref1)
 2. {:#n2} <em>Kalmāṣadamya</em>. C. <span class="ch">劒磨瑟曇</span>, MC. kiam-mua-shet-dam. This is the S. attestation, which is equivalent to P. Kammāsadamma. [\[back\]](#ref2)
 3. {:#n3} <em>this</em>. The Chinese doesn’t use a pronoun in these first two questions, but the meaning appears to be the same as the Pali parallel that reads “ahaṃ nu khosmi … Kiṃ nu khosmi?” [\[back\]](#ref3)
 4. {:#n4} The passage “bad associates … avoids them” is repeated in the Chinese, which appears to be a copyist error of duplication. I’ve omitted it from my translation. [\[back\]](#ref4)
