--- a/01_agama/madhyama/MA_046.md
+++ b/01_agama/madhyama/MA_046.md
@@ -39,7 +39,7 @@ next: MA_047.html
 
 ### Notes
 
-1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0486a21" target="_blank">T26.1.486a21-b21</a>. This <em>sūtra</em> is parallel with [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. It has the tree metaphors found in AN 7.65 and the longer list found in AN 11.3. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0486a21" target="_blank">T26.1.486a21-b21</a>. This <em>sūtra</em> is parallel with [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. It has the tree metaphors found in AN 7.65 and the longer list found in AN 11.1-5. [\[Back\]](#ref1)
 
 ---
 
