--- a/01_agama/madhyama/MA_050.md
+++ b/01_agama/madhyama/MA_050.md
@@ -27,7 +27,7 @@ next: MA_051.html
 
 ### Notes
 
-1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0487a15" target="_blank">T26.1.487a15-b1</a>. A close Pali parallel to this <em>sūtra</em> is [AN 5.22](https://suttacentral.net/an5.22){: target="_blank"}, but it includes the full list from [AN 11.1-4](https://suttacentral.net/an11.1){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0487a15" target="_blank">T26.1.487a15-b1</a>. A close Pali parallel to this <em>sūtra</em> is [AN 5.22](https://suttacentral.net/an5.22){: target="_blank"}, but it includes a longer list like [AN 11.1-4](https://suttacentral.net/an11.1){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
