--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -479,7 +479,7 @@ The monks accepted his instructions and listened.
 149\. “What are ten things to know? The ten things to cease: A person of right view ceases wrong view. The numberless evils produced by the conditions of wrong view are all eliminated, and the numberless virtues produced by the causes of right view are all accomplished. Right intention … right speech … right action … right livelihood … right method … right mindfulness … right <em>samādhi</em> … right liberation … right knowledge. A person of right knowledge ceases wrong knowledge. The numberless evils produced by the causes of wrong knowledge are all eliminated, and the numberless virtues produced by the causes of right knowledge are all accomplished.
 {:#p149}
 
-150\. “What are ten things to be realized? The ten ways of an adept: right view, right intention, right speech, right action, right livelihood, right method, right <em>samādhi</em>, right liberation, and right knowledge.
+150\. “What are ten things to be realized? The ten ways of an adept: right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, right <em>samādhi</em>, right liberation, and right knowledge.
 {:#p150}
 
 151\. “Monks, these hundred things are true and not false. They’ve been known by the Tathāgata who teaches the Dharma equally.”
